manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp-deployment
  namespace: nodeapp
  labels:
    app: nodeapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp-deployment
  template:
    metadata:
      labels:
        app: nodeapp-deployment
    spec:
      containers:
      - name: nodeapp
        image: ralphmujar/nodeapp
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
  namespace: nodeapp
spec:
  selector:
    app: nodeapp-deployment
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
