manifest/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nodeapp-ingress
  namespace: nodeapp
spec:
  rules:
  - host: app.ph
    http:
      paths:
      - backend:
          serviceName: nodeapp-service
          servicePort: 3000
